# hermes

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml
config/: hermes.yaml
docker/: Dockerfile
hooks/: post_tool_use.sh  pre_tool_use.sh  stop.sh
prompts/system/: execute_system.j2  plan_system.j2  qc_system.j2  research_system.j2
src/hermes/: __init__.py  cli.py
src/hermes/executor/: __init__.py  claude_runner.py  context_bridge.py  prompt_builder.py
src/hermes/observability/: __init__.py  logger.py
src/hermes/orchestrator/: __init__.py  core.py  state_machine.py  wal.py
src/hermes/qc/: __init__.py  artifact.py  hard_checks.py
src/hermes/safety/: __init__.py  path_guard.py
src/hermes/utils/: __init__.py  budget.py  config.py  git_ops.py
tests/: conftest.py
tests/unit/: test_artifact.py  test_budget.py  test_claude_runner.py  test_cli.py  test_config.py  test_context_bridge.py  test_git_ops.py  test_hard_checks.py  test_logger.py  test_orchestrator.py  test_prompt_builder.py  test_state_machine.py  test_wal.py
