[project]
name = "hermes"
version = "0.1.0"
description = "Claude Code Workflow 自动化四阶循环系统 — 可审计、可回滚、受约束的 AI 代码执行器"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hermes Team" }]

dependencies = [
    "typer>=0.9",
    "pydantic>=2.5",
    "httpx>=0.27",
    "docker>=7.0",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "filelock>=3.13",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
]
dashboard = ["fastapi>=0.111", "uvicorn>=0.29"]
git = ["gitpython>=3.1"]
tokens = ["tiktoken>=0.7"]
watch = ["watchfiles>=0.21"]

[project.scripts]
hermes = "hermes.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring real Claude API (deselect with '-m \"not integration\"')",
    "chaos: marks chaos engineering tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
